ui/css/treeherder.css
/* ... */
.btn-pink-count-unclassified {
  background-color: rgba(250, 115, 172, 0.16);
  border-color: #fa73ac;
  color: rgba(250, 115, 172, 0.82);
}

.btn-repo {
  border-color: #c3c3c3;
  color: #7c7a7d;
  background-color: #eaeaea;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}
.btn-repo:hover,
.btn-repo:focus,
.btn-repo:active,
.btn-repo.active {
  background-color: #6f6d70;
  border-color: #626163;
  color: white;
}
.btn-repo.disabled:hover,
.btn-repo.disabled:focus,
.btn-repo.disabled:active,
.btn-repo.disabled.active,
.btn-repo[disabled]:hover,
.btn-repo[disabled]:focus,
.btn-repo[disabled]:active,
.btn-repo[disabled].active,
fieldset[disabled] .btn-repo:hover,
fieldset[disabled] .btn-repo:focus,
fieldset[disabled] .btn-repo:active,
fieldset[disabled] .btn-repo.active {
  background-color: #7c7a7d;
  border-color: #7c7a7d;
  color: white;
}

.label-initials {
  border: 1px solid #999999;
  background-color: white;
  color: #999999;
  padding: 0.1em 0.5em;
}

.white, .white a {
    color: white;
}

.lightgray, .lightgray a {
    color: lightgray;
}

#help.dt, #help.dd { text-align: center;}
#help.panel {padding:5px;}
#help{padding-top:10px;}

.waiter-small{ background: url("../img/waiter16.png") no-repeat center center; width: 16px; height: 16px; display: inline-block;}
.waiter-medium{ background: url("../img/waiter32.png") no-repeat center center; width: 32px; height: 32px; display: inline-block;}
.waiter-large{ background: url("../img/waiter64.png") no-repeat center center; width: 64px; height: 64px; display: inline-block;}

.deleted{ text-decoration: line-through;}

.plugin_controls{ margin: 5px;}

.similar_jobs {
   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}

div.similar_jobs .right_panel{ border: 1px solid #101010; flex: 1 1; -webkit-flex: 1 1; }
div.similar_jobs .right_panel form{height:42px; background-color: #D3D3D3;}
div.similar_jobs .right_panel .similar_job_detail{ border-top: 1px solid #101010; }
div.similar_jobs .right_panel .similar_job_detail table { width: 100%; overflow: hidden; }

div.similar_jobs .left_panel{ margin-bottom: 15px; flex: 1 1; -webkit-flex: 1 1; }
div.similar_jobs .left_panel table{ margin-bottom: 5px;}
div.similar_jobs .left_panel table tr.active>td{background-color: #D3D3D3;}
div.similar_jobs .left_panel table tr{cursor: pointer;}


#notification_box{
    position:fixed;
    top:70px;
    right:10px;
    z-index: 1100;
}

#notification_box div.alert{
    margin-bottom:5px;
}

#notification_box button.close{position:relative; top:-2px; right:-8px; color:inherit}

.add-new-filter .form-group{
    margin-bottom: 5px;
}

.th-multi-select input[type=text]{
    width:534px;
}

.th-multi-select select{
    width:250px;
    font-size: 12px;
}

.th-multi-select button{
    width:30px;
}

.form-group-inline>.form-group{
    display: inline-block;
    vertical-align: top;
}

.nowrap{
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

div.logviewer-step{ padding:6px 6px;}

